--- a/package.json
+++ b/package.json
@@ -11,20 +11,24 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@hookform/resolvers": "^5.2.2",
     "@mui/material": "^7.3.6",
     "@tanstack/react-query": "^5.90.16",
     "@tanstack/react-query-devtools": "^5.91.2",
     "aos": "^2.3.4",
     "isotope-layout": "^3.0.6",
+    "mui-one-time-password-input": "^5.0.0",
     "next": "14.2.4",
     "react": "^18",
     "react-bootstrap": "^1.6.1",
     "react-circular-progressbar": "^2.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
+    "react-hook-form": "^7.70.0",
     "react-nice-select": "^1.0.6",
     "react-player": "^2.16.0",
     "react-slick": "^0.30.2",
-    "react-visibility-sensor": "^5.1.1"
+    "react-visibility-sensor": "^5.1.1",
+    "yup": "^1.7.1"
   }
 }
