--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "aos": "^2.3.4",
     "isotope-layout": "^3.0.6",
     "mui-one-time-password-input": "^5.0.0",
-    "next": "14.2.4",
+    "next": "^14.2.35",
     "react": "^18",
     "react-bootstrap": "^1.6.1",
     "react-circular-progressbar": "^2.1.0",
