--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,8 @@
 # Replace with your actual API URL
 NEXT_PUBLIC_API_URL=http://localhost:4000/api
 
+# Base URL for frontend assets and images
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
+
 # TanStack Query DevTools (set to false in production)
 NEXT_PUBLIC_ENABLE_DEVTOOLS=true
