--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
 # API Configuration
 # Replace with your actual API URL
-NEXT_PUBLIC_API_URL=http://localhost:4000/api
+NEXT_PUBLIC_API_URL=http://localhost:4000
 
 # Base URL for frontend assets and images
-NEXT_PUBLIC_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_BASE_URL=blend-backend-production-0649.up.railway.app
+
 
 # TanStack Query DevTools (set to false in production)
 NEXT_PUBLIC_ENABLE_DEVTOOLS=true
