--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query-devtools": "^5.91.2",
     "aos": "^2.3.4",
     "isotope-layout": "^3.0.6",
+    "lottie-react": "^2.4.1",
     "mui-one-time-password-input": "^5.0.0",
     "next": "^14.2.35",
     "react": "^18",
