--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lottie-react": "^2.4.1",
     "mui-one-time-password-input": "^5.0.0",
     "next": "^14.2.35",
+    "next-intl": "^4.7.0",
     "react": "^18",
     "react-bootstrap": "^1.6.1",
     "react-circular-progressbar": "^2.1.0",
