--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.70.0",
     "react-nice-select": "^1.0.6",
+    "react-phone-number-input": "^3.4.14",
     "react-player": "^2.16.0",
     "react-slick": "^0.30.2",
     "react-visibility-sensor": "^5.1.1",
