--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-hook-form": "^7.70.0",
+    "react-hot-toast": "^2.6.0",
     "react-nice-select": "^1.0.6",
     "react-phone-number-input": "^3.4.14",
     "react-player": "^2.16.0",
